--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 globallib_dir = lib
 
-default_envs = han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact
+default_envs = wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact
 
 [env:M5Stick-C]
 platform = espressif32
@@ -40,6 +40,75 @@ lib_ignore =
 	SD
 	SD_MMC
 	rm67162
+	HANSOLOminerv2
+
+;--------------------------------------------------------------------
+
+[env:wt32-sc01]
+platform = espressif32
+board = esp-wrover-kit
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+monitor_speed = 115200
+upload_speed = 921600
+board_build.partitions = huge_app.csv
+lib_deps = 
+	fbiego/ESP32Time@^2.0.0
+	bblanchon/ArduinoJson@^6.21.2
+	lvgl/lvgl@^8.3.1
+	lovyan03/LovyanGFX@^0.4.18
+	https://github.com/tzapu/WiFiManager.git
+	arduino-libraries/NTPClient
+	mathertel/OneButton @ ^2.0.3
+build_flags = 
+	-D BOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-I lib
+	-D LV_MEM_SIZE="(64U * 1024U)"
+	;-D DEBUG_MINING=1
+	-D HAN=1
+	-D WT32_BOARD=1
+lib_ignore =
+	TFT_eSPI
+
+;--------------------------------------------------------------------
+
+[env:wt32-sc01-plus]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+monitor_speed = 115200
+upload_speed = 921600
+board_build.partitions = default_8MB.csv
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
+lib_deps = 
+	fbiego/ESP32Time@^2.0.0
+	bblanchon/ArduinoJson@^6.21.2
+	lvgl/lvgl@^8.3.1
+	lovyan03/LovyanGFX@^0.4.18
+	https://github.com/tzapu/WiFiManager.git
+	arduino-libraries/NTPClient
+	mathertel/OneButton @ ^2.0.3
+build_flags = 
+	-D BOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-I lib
+	-D LV_MEM_SIZE="(96U * 1024U)"
+	;-D DEBUG_MINING=1
+	-D HAN=1
+	-D WT32_BOARD=1
+	-D PLUS=1
+lib_ignore =
+	TFT_eSPI
+
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-mini-wemos]
@@ -70,6 +139,8 @@ lib_deps =
 	https://github.com/FastLED/FastLED
 lib_ignore =
 	TFT_eSPI
+	HANSOLOminerv2
+
 ;--------------------------------------------------------------------
 
 [env:han_m5stack]
@@ -97,6 +168,8 @@ lib_deps =
 	m5stack@^0.4.6
 lib_ignore =
 	TFT_eSPI
+	HANSOLOminerv2
+
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-mini-weact]
@@ -127,6 +200,8 @@ lib_deps =
 	https://github.com/FastLED/FastLED
 lib_ignore =
 	TFT_eSPI
+	HANSOLOminerv2
+
 ;--------------------------------------------------------------------
 
 [env:ESP32-C3-super-mini]
@@ -156,6 +231,8 @@ lib_deps =
 	arduino-libraries/NTPClient
 lib_ignore =
 	TFT_eSPI
+	HANSOLOminerv2
+
 ;--------------------------------------------------------------------
 
 [env:ESP32-C3-devKitmv1]
@@ -186,6 +263,7 @@ lib_deps =
 	https://github.com/FastLED/FastLED
 lib_ignore =
 	TFT_eSPI
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -217,6 +295,7 @@ lib_deps =
 	https://github.com/FastLED/FastLED
 lib_ignore =
 	TFT_eSPI
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -250,6 +329,8 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -283,6 +364,8 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -308,6 +391,8 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -334,6 +419,8 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -353,6 +440,8 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -375,6 +464,8 @@ lib_deps =
 	arduino-libraries/NTPClient
 	https://github.com/FastLED/FastLED
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -403,7 +494,7 @@ lib_deps =
 	arduino-libraries/NTPClient
 	https://github.com/takkaO/OpenFontRender
 lib_ignore =
-	;TFT_eSPI
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -418,17 +509,17 @@ monitor_filters =
 ;board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
-	
 build_flags = 
 	-D BOARD_HAS_PSRAM
 	-D NERMINER_T_QT=1
-
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
+lib_ignore =
+	HANSOLOminerv2
 
  ;--------------------------------------------------------------------
 
@@ -479,6 +570,8 @@ lib_deps =
 	arduino-libraries/NTPClient
 	bodmer/TFT_eSPI @ ^2.5.31
 	https://github.com/achillhasler/TFT_eTouch
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -524,6 +617,8 @@ lib_deps =
 	arduino-libraries/NTPClient
 	bodmer/TFT_eSPI @ ^2.5.31
 	https://github.com/achillhasler/TFT_eTouch
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -531,22 +626,20 @@ lib_deps =
 platform = espressif32
 board = ttgo-lora32-v1
 framework = arduino
-
 monitor_speed = 115200
 upload_speed = 115200
-
 board_build.partitions = huge_app.csv
-
 build_flags = 
     -D NERDMINER_T_DISPLAY_V1=1
 	-D DEBUG_MINING=1
-
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	https://github.com/arduino-libraries/NTPClient
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -577,3 +670,4 @@ lib_ignore =
 	SD
 	rm67162
 	SPI
+	HANSOLOminerv2
